# DuccBot-Display

./: .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  readme.md  start.sh
example-Bot/commands/: leveling.py
example-logs/: test.json  testing.json  users.json
lib/: types.ts  utils.ts
public/: index.html
scripts/: build-app.mjs
src/: main.rs  parse_log.rs  routes.rs
src-app/: apiClient.ts  app.tsx
src-app/components/: Badge.tsx  StatusTable.tsx  Tooltip.tsx  VPNStatusTable.tsx
src-app/lib/: types.ts
src-service/: parse-log.ts  routes.ts  service.ts  utils.ts
src/lib/: structures.rs  utils.rs
