[package]
name = "duccbotdisplay"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web ="4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
state = { version = "0.5", features = ["tls"] }
chrono = "0.4.24"
actix-rt = "2.8.0"